--- a/gb/20/8/31/n12370955.md
+++ b/gb/20/8/31/n12370955.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/umgvlm3440/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/umgvlm3440/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/umgvlm3440/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/umgvlm3440/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/umgvlm3440/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/umgvlm3440/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/umgvlm3440/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/umgvlm3440/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/umgvlm3440/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/umgvlm3440/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/umgvlm3440/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/umgvlm3440/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/umgvlm3440/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/umgvlm3440/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/umgvlm3440/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/umgvlm3440/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/umgvlm3440/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/umgvlm3440/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/umgvlm3440/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/umgvlm3440/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/umgvlm3440/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/umgvlm3440/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/umgvlm3440/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/umgvlm3440/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>伸展让身体柔软 有3大好处 1动作消除脖子僵硬</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/stretch-and-muscle-fy-1-600x400.jpg" />
 <h6>伸展运动可以增加身体柔软度、调节自律神经，有许多好处。(Shutterstock)
 </h6>
 <hr>
-<p><span style="color: #188638;"><strong>【编者按】</strong><ahref="https://github.com/umgvlm3440/djy/blob/master/gb/tag/%E4%BC%B8%E5%B1%95.md#1">伸展</a>运动可以增加身体<ahref="https://github.com/umgvlm3440/djy/blob/master/gb/tag/%E6%9F%94%E8%BD%AF%E5%BA%A6.md#1">柔软度</a>、调节自律神经，有许多<ahref="https://github.com/umgvlm3440/djy/blob/master/gb/tag/%E5%A5%BD%E5%A4%84.md#1">好处</a>。日本<ahref="https://github.com/umgvlm3440/djy/blob/master/gb/tag/%E4%BC%B8%E5%B1%95%E6%93%8D.md#1">伸展操</a>专家中田雄大教你1个简单的伸展动作，消除<ahref="https://github.com/umgvlm3440/djy/blob/master/gb/tag/%E8%84%96%E5%AD%90.md#1">脖子</a>的僵硬不适。</span></p>
-<h2><span style="color: #188638;">做<ahref="https://github.com/umgvlm3440/djy/blob/master/gb/tag/%E4%BC%B8%E5%B1%95.md#1">伸展</a>操的三大<ahref="https://github.com/umgvlm3440/djy/blob/master/gb/tag/%E5%A5%BD%E5%A4%84.md#1">好处</a></span></h2>
-<h3>1. 提升<ahref="https://github.com/umgvlm3440/djy/blob/master/gb/tag/%E6%9F%94%E8%BD%AF%E5%BA%A6.md#1">柔软度</a>，使日常动作变得格外轻松</h3>
-<p><ahref="https://github.com/umgvlm3440/djy/blob/master/gb/tag/%E4%BC%B8%E5%B1%95%E6%93%8D.md#1">伸展操</a>的第一个优点是能够提升柔软度，使日常动作变得格外轻松。</p>
+<p><span style="color: #188638;"><strong>【编者按】</strong><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BC%B8%E5%B1%95.md#1">伸展</a>运动可以增加身体<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%9F%94%E8%BD%AF%E5%BA%A6.md#1">柔软度</a>、调节自律神经，有许多<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A5%BD%E5%A4%84.md#1">好处</a>。日本<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BC%B8%E5%B1%95%E6%93%8D.md#1">伸展操</a>专家中田雄大教你1个简单的伸展动作，消除<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%84%96%E5%AD%90.md#1">脖子</a>的僵硬不适。</span></p>
+<h2><span style="color: #188638;">做<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BC%B8%E5%B1%95.md#1">伸展</a>操的三大<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A5%BD%E5%A4%84.md#1">好处</a></span></h2>
+<h3>1. 提升<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%9F%94%E8%BD%AF%E5%BA%A6.md#1">柔软度</a>，使日常动作变得格外轻松</h3>
+<p><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BC%B8%E5%B1%95%E6%93%8D.md#1">伸展操</a>的第一个优点是能够提升柔软度，使日常动作变得格外轻松。</p>
 <p>如果身体柔软度太差、关节周围的肌肉变得太硬，“关节可动域”（Range of motion）就会变窄，这时就会发生两脚连九十度也张开不了、前屈时手指碰不到地板的窘境。</p>
 <p>当身体处于这样的状态，就会连带引发许多问题，例如上下楼梯倍感艰辛，一不小心就会受伤；从事各种体育运动时，也可能无法发挥全部实力，运动伤害的风险也会提高。只要肌肉变得柔软，身体的柔软度就会提升，日常生活中的各种动作都会变得轻盈灵巧，请务必实践看看。</p>
 <p><strong>为什么伸展运动能增加身体柔软度？</strong></p>
@@ -29,7 +29,7 @@
 <p>实际上，人体之所以会有沉重、灵活度降低的问题，绝大部分的原因都是“肌肉太过僵硬”。</p>
 <p>例如因为使用电脑或低头滑手机的关系，身体长时间维持不动，肌肉没有伸缩的机会，就会以相同的长度维持收缩的状态。这样的状态如果迟迟没能改善，长期下来肌肉就会变硬；变硬的肌肉会压迫到血管，导致血液循环不良。如此一来，各种造成疲劳的废物（身体内的老废物质）便没有办法排出，接着就会出现身体僵硬、酸痛等各种不舒服的症状。</p>
 <p>我相信绝大部分坐办公室的上班族，应该每天都是长时间地维持相同的姿势吧？这正是造成肌肉僵硬的主要原因，因此，强烈建议大家一定要经常起来活动一下身体。</p>
-<h2><span style="color: #188638;">一个伸展动作，消除<ahref="https://github.com/umgvlm3440/djy/blob/master/gb/tag/%E8%84%96%E5%AD%90.md#1">脖子</a>僵硬、不适</span></h2>
+<h2><span style="color: #188638;">一个伸展动作，消除<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%84%96%E5%AD%90.md#1">脖子</a>僵硬、不适</span></h2>
 <p>胸锁乳突肌是脖子上最粗的肌肉，从锁骨连接到耳后，功用是让脖子可以左右转动及倾斜。“游自由式时的换气动作”，使用的就是此部位的肌肉。</p>
 <figure id="attachment_12371129" aria-describedby="caption-attachment-12371129" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/09/stretch-and-muscle-fy-P422.jpg"><img class="size-large wp-image-12371129" src="https://i.epochtimes.com/assets/uploads/2020/09/stretch-and-muscle-fy-P422-600x366.jpg" alt="胸锁乳突肌是脖子上最粗的肌肉，功用是让脖子可以左右转动及倾斜。（方言文化提供）" width="600" b="366" /></a><figcaption id="caption-attachment-12371129" class="wp-caption-text">胸锁乳突肌是脖子上最粗的肌肉，功用是让脖子可以左右转动及倾斜。（方言文化）</figcaption></figure>
 <p>脖子经常感到僵硬、沉重与不适的人，大多是因为长时间面对电脑，或是从事某些颈部必须固定在相同位置的工作所致。</p>
@@ -43,60 +43,60 @@
 <p>如果拉伸脖子觉得很痛，可以改为将头转向一边，然后轻轻按摩胸锁乳突肌。使用拇指、食指及中指，从锁骨轻按到下巴的根部附近，按到自己觉得舒服的程度就可以停止。</p>
 <p>POINT：如果手掌施力过猛，造成反弹的现象，很可能会让脖子受伤，请千万要注意。</p>
 <p><strong>其它伸展动作：</strong></p>
-<p style="text-align: center;"><div class="video_fit_container"><a width="635" b="356" class="video_frame" src=""></a><a href="https://d3a3umoypakbtm.cloudfront.net/I6xKvy64m"><img width="600" src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/umgvlm3440/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/u0RpPEesya8?wmode=transparent&#038;wmode=opaque" allowfullscreen></a>
+<p style="text-align: center;"><div class="video_fit_container"><a width="635" b="356" class="video_frame" src=""></a><a href="https://d2oemtubh889hy.cloudfront.net/J7sKvy64k"><img width="600" src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/u0RpPEesya8?wmode=transparent&#038;wmode=opaque" allowfullscreen></a>
 	</div></p>
 <p>摘自《<span style="color: #188638;"><a style="color: #188638;" href="https://www.books.com.tw/products/0010867641" target="_blank" rel="noopener noreferrer">解酸止痛，筋膜伸展解剖书</a></span>》 方言文化出版</p>
-<p>身处纷乱之世，心存健康之道，就看<span style="text-decoration: underline;"><span style="color: #188638; text-decoration: underline;"><a style="color: #188638; text-decoration: underline;" href="https://github.com/umgvlm3440/djy/blob/master/gb/nsc1002.md#1" target="_blank" rel="noopener noreferrer">健康1+1</a></span></span>！</p>
-<h3><span style="color: #188638;">·?<a style="color: #188638;" href=><a href="https://github.com/umgvlm3440/djy/blob/master/gb/20/8/11/n12323815.md#1" target="_blank" rel="noopener noreferrer">颈后凸一个大包？4个动作舒缓水牛肩</a></span></h3>
-<h3><span style="color: #188638;">·?<a style="color: #188638;" href=><a href="https://github.com/umgvlm3440/djy/blob/master/gb/20/8/5/n12308945.md#1" target="_blank" rel="noopener noreferrer">一只吹风机保养全身！这样吹增强免疫力 改善慢性病</a></span></h3>
-<h3><span style="color: #188638;">·?<a style="color: #188638;" href="https://github.com/umgvlm3440/djy/blob/master/gb/19/8/5/n11433011.md#1" target="_blank" rel="noopener noreferrer">腰背痛怎么办？8招保养腰部 和疼痛拜拜</a></span></h3>
+<p>身处纷乱之世，心存健康之道，就看<span style="text-decoration: underline;"><span style="color: #188638; text-decoration: underline;"><a style="color: #188638; text-decoration: underline;" href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1" target="_blank" rel="noopener noreferrer">健康1+1</a></span></span>！</p>
+<h3><span style="color: #188638;">·?<a style="color: #188638;" href=><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/8/11/n12323815.md#1" target="_blank" rel="noopener noreferrer">颈后凸一个大包？4个动作舒缓水牛肩</a></span></h3>
+<h3><span style="color: #188638;">·?<a style="color: #188638;" href=><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/8/5/n12308945.md#1" target="_blank" rel="noopener noreferrer">一只吹风机保养全身！这样吹增强免疫力 改善慢性病</a></span></h3>
+<h3><span style="color: #188638;">·?<a style="color: #188638;" href="https://github.com/ydbzqt347/djy/blob/master/gb/19/8/5/n11433011.md#1" target="_blank" rel="noopener noreferrer">腰背痛怎么办？8招保养腰部 和疼痛拜拜</a></span></h3>
 <p>责任编辑：李清风◇</p>
 
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/10/12/26/n3124011.md#1">福祸大逆转！留美女硕士的二度人生</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/20/5/12/n12100564.md#1">压力让你变老！10个纾压方法 助你年轻10岁</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/20/6/16/n12190494.md#1">比仰卧起坐练核心肌群更有效！棒式运动正确做法</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/20/7/14/n12254041.md#1">慢性疼痛可能是自律神经失调 2招舒缓</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/20/7/22/n12276193.md#1">手腕疼痛不适？手部受伤最常见的三大类型</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/20/7/23/n12279492.md#1">脚趾不好全身歪？3分钟“足趾操”身体变端正</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/20/8/1/n12299649.md#1">和肩颈、腰背酸痛说拜拜！只要简单2步骤</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/20/8/21/n12347602.md#1">常按4穴道让你心情变好 降火气又纾压</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/19/n13589665.md#1">“回春操”只要2动作！防老化 让身体变年轻</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/20/n13591322.md#1">晚上睡觉腿抽筋？有五个简单预防办法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/12/26/n3124011.md#1">福祸大逆转！留美女硕士的二度人生</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/12/n12100564.md#1">压力让你变老！10个纾压方法 助你年轻10岁</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/6/16/n12190494.md#1">比仰卧起坐练核心肌群更有效！棒式运动正确做法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/7/14/n12254041.md#1">慢性疼痛可能是自律神经失调 2招舒缓</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/7/22/n12276193.md#1">手腕疼痛不适？手部受伤最常见的三大类型</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/7/23/n12279492.md#1">脚趾不好全身歪？3分钟“足趾操”身体变端正</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/8/1/n12299649.md#1">和肩颈、腰背酸痛说拜拜！只要简单2步骤</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/8/21/n12347602.md#1">常按4穴道让你心情变好 降火气又纾压</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/19/n13658224.md#1">著名体能教练的十大健康与体适能建议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/12/n13640906.md#1">健走能分泌肌肉激素 有防中风等12种好处</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/8/n11308535.md#1" target="_blank">金雁：“既得利益者”何以成为反对苏维埃的先锋?</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/4/26/n2096078.md#1" target="_blank">载入史册的一幕 中南海万人上访</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/22/n10994378.md#1" target="_blank">陆文：迫害佛法最终害了自己</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/9/n11243655.md#1" target="_blank">如何带好问题生 真善忍解难题</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/17/n13582748.md#1">【奇事】这一种算命术连皇帝都大为惊奇</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/14/n13576687.md#1">【百年真相】瞒天过海 中共炮制“美军细菌战”</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/1/27/n13533579.md#1">唐朝皇族后裔的教训 德性有亏一夕化虎</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/18/n13586699.md#1">【奇医】神医的再传弟子 看病有慧眼立奇功</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/26/n13607594.md#1">【财商天下】失业潮继续扩大 中共如何稳预期</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/28/n13611592.md#1">【新闻大家谈】俄亮核武威胁 中共幕后参与？</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/26/n13607632.md#1">【时事军事】特种部队 俄入侵乌克兰的秘密武器</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/25/n13604960.md#1">坚果是抗糖尿病绝佳食物 防高血糖、并发症</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/25/n13604998.md#1">【更新2.25】乌总统：我们不会放下武器</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/25/n13605502.md#1">北京陷窘境 凌晨发表对乌克兰五点立场声明</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/25/n13605706.md#1">陈婷宣布取消“张艺谋妻子”微博头衔 引猜测</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/27/n13607917.md#1">家乡遭俄军攻击 瑞莎崩溃怒喊：究竟为了什么</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/25/n13605987.md#1">飞往上海开工 香港歌手许靖韵确诊染疫</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/25/n13604960.md#1">坚果是抗糖尿病绝佳食物 防高血糖、并发症</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/18/n13586671.md#1">不吃早餐糖尿病风险增40％ 3组早餐养胃强身</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/26/n13607115.md#1">【直播】疫情、疫苗 CDC没告诉你的2件事</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/25/n13605795.md#1">羽绒衣手洗更长寿！5个清洗技巧常保如新</a></li>
-<li><a href="https://github.com/umgvlm3440/djy/blob/master/gb/22/2/26/n13606713.md#1">俄乌战火将如何波及美国房地产？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689428.md#1">【军事热点】美国新国防战略 中共位居威胁之首</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/umgvlm3440/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/umgvlm3440/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/31/n12370955.htm">伸展让身体柔软 有3大好处 1动作消除脖子僵硬</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/31/n12370955.htm">伸展让身体柔软 有3大好处 1动作消除脖子僵硬</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/umgvlm3440/djy/blob/master/gb/20/8/31/n12370955.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/umgvlm3440/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/umgvlm3440/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/umgvlm3440/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/umgvlm3440/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/umgvlm3440/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/8/31/n12370955.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
